# fastapi_ecommerce

./: README.md  pyproject.toml
src/fastapi_ecommerce/: alembic.ini  auth.py  database.py  db_depends.py  ecommerce.db  main.py  schemas.py
src/fastapi_ecommerce/migrations/: env.py
src/fastapi_ecommerce/migrations/versions/: 1e36b40dda19_add_orders_and_order_items.py  1e7095809ebc_fixed_bugs.py  52e4f40a3b54_add_user_model.py  920538fa15b4_create_table_cart_items.py  bfedba400526_create_reviews_table.py  c3e3140d307c_create_search_vector.py  e7f4efefd434_added_args_for_reviews_table.py  f912df97bec5_initial_migration_for_postgresql.py
src/fastapi_ecommerce/models/: __init__.py  cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
src/fastapi_ecommerce/routers/: cart.py  categories.py  orders.py  products.py  reviews.py  users.py
